--- a/style.css
+++ b/style.css
@@ -1,4 +1,12 @@
 body {
 	background-color: #ccc;
-	padding: 0 2rem;
+	padding: 2rem;
+}
+
+fieldset {
+	margin-bottom: 1rem;
+	padding: 1rem;
+}
+legend {
+	font-family: 'Courier New', Courier, monospace;
 }
